--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,24 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        	
+
+    	    <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+       
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        
         <dependency>
   			<groupId>org.tensorflow</groupId>
   			<artifactId>tensorflow</artifactId>
   			<version>1.2.1</version>
 		</dependency>	
+		
         <!-- tag::actuator[] -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
