--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,12 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.springframework</groupId>
-    <artifactId>gs-spring-boot</artifactId>
+    <groupId>com.deocampo.gsb</groupId>
+    <artifactId>gcs-spring-boot</artifactId>
     <version>0.1.0</version>
+    
+	<name>Google Cloud Service Spring Boot Project</name>
+	<description>Google Cloud Service Spring Boot Project</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -14,14 +17,15 @@
     </parent>
 
     <dependencies>
+    
+    		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+    
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-    	    <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
        
         <dependency>
